[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.10.8"

[dev-dependencies]
solana-program-test = "1.10.8"
solana-sdk = "1.10.8"

[lib]
crate-type = ["cdylib", "lib"]